--- a/styles/app.less
+++ b/styles/app.less
@@ -69,7 +69,7 @@ header {
 }
 
 nav {
-  margin-top: -1px;
+  margin-top: -1em;
   height: 70px;
   background-color: @pink;
   .row {
@@ -80,11 +80,38 @@ nav {
 }
 
 .subtopic-list {
-
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  margin-top: -5px;
+  
+  >* {
+    display: inline-block;
+  }
+  
+  .list-parent {
+    height: 1000%;
+    width: 1000%;
+    overflow: hidden;
+    position: relative;
+    
+    ul.list {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: -17px;
+      overflow-x: scroll;
+    }
+  }
+  
   ul.list {
     font-size: 11px;
     white-space: nowrap;
-    height: 25px;
+    padding-top: 2px;
+    width: 80%;
+    overflow: scroll;
+    
     li {
       cursor: pointer;
       display: inline-block;
@@ -171,14 +198,26 @@ nav {
   }
   
   .button {
-    width: 15px;
-    height: 15px;
-    .left {
-      background: url('/images/left.png')
+    
+    z-index: 2;
+    &.left {
+      left: 18px;
+      width: 15px;
+      height: 30px;
+      position: absolute;
+      margin-top: 5px;
     }
-
-    .right {
-      background: url('/images/right.png')
+    &.right {
+      text-align: right;
+      padding-right: 20px;
+      top: 58px;
+      width: 50px;
+      height: 45px;
+      right: 0px;
+      background-color: @pink;
+      padding-top: 10px;
+      margin-top: -10px;
+      position: absolute;
     }
   }
 }
@@ -213,8 +252,8 @@ nav {
       border-radius: 0 2px 0 0;
     }
     .decorate {
-      .triangle(150px, @light-purple);
-      margin-top: -1px;
+      .triangle(180px, @light-purple);
+      margin-top: -1em;
     }
   }
   
@@ -248,8 +287,8 @@ nav {
     }
     
     .decorate {
-      .triangle(360px, @light-purple);
-      margin-top: -1px;
+      .triangle(500px, @light-purple);
+      margin-top: -1em;
     }
     
     .bottom {
@@ -283,8 +322,8 @@ nav {
       border-radius: 2px 0 0 0;
     }
     .decorate {
-      .triangle(150px, @light-purple);
-      margin-top: -1px;
+      .triangle(280px, @light-purple);
+      margin-top: -1em;
     }
   }
 }
