Add animation to the main window

--- a/styles/app.less
+++ b/styles/app.less
@@ -347,3 +347,20 @@ ul.view-choice {
     }
   }
 }
+
+.subtopic-enter {
+  opacity: 0.01;
+}
+
+.subtopic-enter.subtopic-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.subtopic-leave {
+  display: none;
+}
+
+.subtopic-leave.subtopic-leave-active {
+  display:none;
+}
