--- a/styles/app.less
+++ b/styles/app.less
@@ -11,6 +11,11 @@
 
 @subtopic-height: 400px;
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .no-padding {
   padding: 0px !important;
 }
@@ -91,18 +96,16 @@ nav {
   }
   
   .list-parent {
-    height: 1000%;
-    width: 1000%;
-    overflow: hidden;
+    height: 200%;
+    width: 200%;
     position: relative;
+    margin-left: 47px;
+    overflow-x: hidden;
     
     ul.list {
-      position: absolute;
       top: 0;
       bottom: 0;
       left: 0;
-      right: -17px;
-      overflow-x: scroll;
     }
   }
   
@@ -110,8 +113,7 @@ nav {
     font-size: 11px;
     white-space: nowrap;
     padding-top: 2px;
-    width: 80%;
-    overflow: scroll;
+    display: inline-block;
     
     li {
       cursor: pointer;
@@ -199,12 +201,21 @@ nav {
   }
   
   .button {
+    cursor: pointer;
+    &.inactive {
+      cursor: default;
+    }
     &.left {
-      left: 18px;
-      width: 15px;
-      height: 30px;
+      text-align: left;
+      padding-left: 20px;
+      top: 58px;
+      width: 50px;
+      height: 45px;
+      left: 0px;
+      background-color: @pink;
+      padding-top: 10px;
+      margin-top: -10px;
       position: absolute;
-      margin-top: 5px;
     }
     &.right {
       text-align: right;
@@ -349,18 +360,17 @@ ul.view-choice {
 }
 
 .subtopic-enter {
+  filter: alpha(opacity=1);
   opacity: 0.01;
-}
-
-.subtopic-enter.subtopic-enter-active {
-  opacity: 1;
-  transition: opacity 500ms ease-in;
+  &.subtopic-enter-active {
+    filter: alpha(opacity=100);
+    opacity: 1;
+    transition: filter 500ms ease-in;
+    -webkit-transition: opacity 500ms ease-in;
+    transition: opacity 500ms ease-in;
+  }
 }
 
 .subtopic-leave {
   display: none;
-}
-
-.subtopic-leave.subtopic-leave-active {
-  display:none;
 }
